samples/_failures_safe/1761251919_cb76a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ce07549.c: In function ‘print_token’:
./samples/SAFE/__tmp_6ce07549.c:160:55: error: missing terminating " character
  160 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF
      |                                                       ^~~~
./samples/SAFE/__tmp_6ce07549.c:160:9: error: expected expression at end of input
  160 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF
      |         ^~~~~~~~
./samples/SAFE/__tmp_6ce07549.c:160:9: error: expected declaration or statement at end of input
